# openenv-round1-ticket-triage

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
scripts/: validate-submission.sh
server/: Dockerfile  app.py  requirements.txt
ticket_triage_env/: __init__.py  models.py
ticket_triage_env/server/: app.py  environment.py
